--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ag-grid-community/core": "^32.3.3",
+    "@ag-grid-community/react": "^32.3.3",
     "@aws-amplify/adapter-nextjs": "^1.4.3",
     "@aws-amplify/ui-react": "^6.9.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
     "aws-amplify": "^6.12.3",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-spinners": "^0.15.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.14.0",
