--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@aws-amplify/ui-react": "^6.9.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.0.0",
     "@mui/material": "^6.4.3",
+    "ag-grid-community": "^33.0.4",
+    "ag-grid-react": "^33.0.4",
     "aws-amplify": "^6.12.3",
     "next": "15.1.6",
     "react": "^19.0.0",
