--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ag-grid-community/core": "^32.3.3",
     "@ag-grid-community/react": "^32.3.3",
     "@aws-amplify/adapter-nextjs": "^1.4.3",
+    "@aws-amplify/api-graphql": "^4.7.3",
     "@aws-amplify/ui-react": "^6.9.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
