--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ag-grid-community/core": "^32.3.3",
-    "@ag-grid-community/react": "^32.3.3",
     "@aws-amplify/adapter-nextjs": "^1.4.3",
     "@aws-amplify/api-graphql": "^4.7.3",
     "@aws-amplify/ui-react": "^6.9.1",
@@ -18,8 +16,8 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.0.0",
     "@mui/material": "^6.4.3",
-    "ag-grid-community": "^33.0.4",
-    "ag-grid-react": "^33.0.4",
+    "ag-grid-react": "~33.0.4",
+    "ag-grid-community": "~33.0.4",
     "aws-amplify": "^6.12.3",
     "next": "15.1.6",
     "react": "^19.0.0",
